--- a/css/estilo-home.css
+++ b/css/estilo-home.css
@@ -11,12 +11,18 @@
 }
 
 :root{
-    --escuro: #232536;
-    --baunilha: #FAE9C7;
+    --preto: #232536;
+    --baunilha: #FBF6EA;
+    --baunilha-escuro: #FAE9C7;
     --ciano-morto: #69A2AF;
     --branco: #fff;
     --amarelo: #FFD050;
     --roxo: #6E48B4;
+    --cinza: #6D6E76;
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 a{
@@ -29,13 +35,16 @@ ul{
 
 .center{ /*Esta classe vai centralizar o conteúdo e vai determinar qual é a largura máxima*/
     width: 100%;
-    max-width: 1280px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
 }
 
 header{
-    background: var(--escuro);
+    background: var(--preto);
+    position: fixed;
+    width: 100%;
+    z-index: 999;
 }
 
 .nav-bar {
@@ -63,7 +72,7 @@ header{
     display: inline-block;
     padding: 10px 35px;
     font-weight: 700;
-    color: var(--escuro);
+    color: var(--preto);
     background: var(--branco);
     transition: background 0.3s;
 }
@@ -80,6 +89,7 @@ header{
     background-image: url('../img/fundo.jpg');
     background-size: cover;
     background-position: right;
+    top: 9vh;
     position: relative;
 }
 
@@ -114,3 +124,210 @@ header{
     text-align: justify;
     line-height: 28px;
 }
+
+/* section informativo */
+
+.informativo{
+    padding: 150px 20px 100px 20px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.info-header{
+    letter-spacing: -2px;
+    font-size: 2.4rem;
+    margin-bottom: 20px;
+    color: var(--preto);
+}
+
+.info-left{
+    width: 58%;
+}
+
+.info-img{
+    width: 100%;
+    height: auto;
+}
+
+.info-left img{
+    width: 100%;
+    object-fit: cover;
+}
+
+.link-posts{
+    position: absolute;
+    top: 20px;
+    right: 10px;
+    font-family: 'Inter';
+    font-weight: 600;
+    font-size: 0.8rem;
+    color: var(--ciano-morto);
+}
+
+.info-left-text{
+    padding: 20px;
+    color: var(--preto);
+    border-right: 1px solid rgba(0,0,0,0.08);
+    border-left: 1px solid rgba(0,0,0,0.08);
+    border-bottom: 1px solid rgba(0,0,0,0.08);
+}
+
+.info-creator{
+    font-family: 'Inter';
+    color: var(--cinza);
+    font-size: 0.8rem;
+    font-weight: 500;
+}
+
+.info-creator span{
+    color: var(--ciano-morto);
+    font-family: 'Inter';
+}
+
+.info-title{
+    letter-spacing: -1px;
+    font-size: 1.8rem;
+    margin-top: 20px;
+    color: var(--preto);
+}
+
+.info-para{
+    font-family: 'Inter';
+    color: var(--cinza);
+    margin: 30px 0 70px;
+}
+
+.info-left-text .btn{
+    background: var(--amarelo);
+}
+
+.info-right{
+    width: 38%;
+    position: relative;
+}
+
+.info-right-post{
+    display: flex;
+    flex-direction: column;
+}
+
+.post{
+    padding: 30px 0 60px 30px;
+}
+
+.post:hover{
+    background: var(--baunilha);
+}
+
+.post-title{
+    margin-top: 20px;
+    font-size: 1.6rem;
+    color: var(--preto);
+    width: 80%;
+}
+
+/* section about */
+
+.line-detail{
+    display: flex;
+    justify-content: end;
+    height: 20px;
+    padding: 0;
+}
+
+.baunilha-escuro{
+    background: var(--baunilha-escuro);
+    width: 60%;
+}
+
+.ciano{
+    background: var(--ciano-morto);
+    width: 20%;
+}
+
+.about{
+    padding: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    color: var(--branco);
+    background: var(--ciano-morto);
+}
+
+.about-text{
+    width: 47.5%;
+}
+
+.about-title{
+    font-family: 'Inter';
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    letter-spacing: 3px;
+    font-weight: 500;
+}
+
+.about-msg{
+    letter-spacing: -2px;
+    font-size: 1.8rem;
+    margin: 30px 0;
+    line-height: 48px;
+}
+
+.about-para{
+    font-family: 'Inter';
+    line-height: 28px;
+}
+
+/* section categorias */
+
+.categorias{
+    padding: 100px 20px;
+    
+}
+
+.cat-title{
+    text-align: center;
+    letter-spacing: -2px;
+    font-size: 2.4rem;
+}
+
+.categorias-container{
+    margin: 50px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.categorias-box{
+    width: 300px;
+    padding: 50px 30px;
+    display: flex;
+    flex-direction: column;
+    transition: 0.3s;
+}
+
+.categorias-box:hover{
+    background: var(--amarelo);
+}
+
+.categorias-img{
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--baunilha);
+}
+
+.cat-box-title{
+    margin: 10px 0;
+    font-size: 1.8rem;
+    color: var(--preto);
+}
+
+.cat-box-para{
+    font-family: 'Inter';
+    color: var(--cinza);
+}
+
