--- a/css/estilo-home.css
+++ b/css/estilo-home.css
@@ -1,6 +1,6 @@
 /*Fontes*/
 @import url('https://fonts.googleapis.com/css2?family=Sen:wght@700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Sen:wght@700&display=swap');
 
 *{
@@ -68,6 +68,14 @@ header{
     font-family: Inter;
 }
 
+.nav-links .btn{
+    color: var(--preto);
+}
+
+.nav-links .btn:hover{
+    background: #cbcbcb;
+}
+
 .btn{
     display: inline-block;
     padding: 10px 35px;
@@ -77,9 +85,17 @@ header{
     transition: background 0.3s;
 }
 
-.btn:hover {
-    background-color: #d1d1d1;
+.icon{
+    font-size: 2rem;
+    cursor: pointer;
+    display: none;
 }
+
+.menu{
+    color: var(--branco);
+}
+
+
 
 .hero-section{
     display: flex;
@@ -143,6 +159,9 @@ header{
 
 .info-left{
     width: 58%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .info-img{
@@ -166,11 +185,12 @@ header{
 }
 
 .info-left-text{
-    padding: 20px;
+    padding: 80px 30px 0 30px;
     color: var(--preto);
     border-right: 1px solid rgba(0,0,0,0.08);
     border-left: 1px solid rgba(0,0,0,0.08);
     border-bottom: 1px solid rgba(0,0,0,0.08);
+    flex: 2;
 }
 
 .info-creator{
@@ -308,6 +328,7 @@ header{
 
 .categorias-box:hover{
     background: var(--amarelo);
+    box-shadow: 0px 0px 10px -5px rgba(0,0,0,0.75);
 }
 
 .categorias-img{
@@ -331,3 +352,292 @@ header{
     color: var(--cinza);
 }
 
+/* section apoio */
+
+.apoio-content{
+    position: relative;
+}
+
+.apoio-img{
+    width: 80%;
+    height: 700px;
+}
+
+.apoio-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.apoio-text{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background: var(--branco);
+    width: 52%;
+    height: 560px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+    padding: 70px;
+}
+
+.apoio-text span{
+    font-family: 'Inter';
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 600;
+}
+
+.apoio-text h2{
+    font-size: 2.8rem;
+}
+
+.apoio-text p{
+    font-family: 'Inter';
+    font-size: 0.9rem;
+    line-height: 30px;
+    color: var(--cinza);
+}
+
+.apoio-text a{
+    background: var(--amarelo);
+    transition: 0.3s;
+}
+
+/* section testemunhas */
+
+.testemunhas{
+    margin: 100px auto;
+    padding: 100px;
+    display: flex;
+    justify-content: space-between;
+    background: var(--baunilha) url('../img/line.png') no-repeat 40% center;
+}
+
+.testemunhas-left span{
+    text-transform: uppercase;
+    font-family: 'Inter';
+    font-weight: 600;
+    letter-spacing: 3px;
+}
+
+.testemunhas-left h2{
+    margin-top: 20px;
+    font-size: 2rem;
+    line-height: 42px;
+}
+
+.testemunhas-right{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.testemunhas-right p{
+    font-size: 1.5rem;
+    line-height: 32px;
+}
+
+.perfil{
+    display: flex;
+    align-items: center;
+}
+
+.perfil-img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: var(--cinza);
+    overflow: hidden;
+}
+
+.perfil-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.perfil-info{
+    display: flex;
+    flex-direction: column;
+    margin-left: 15px;
+}
+
+.perfil-location{
+    margin-top: 5px;
+    font-family: 'Inter';
+    font-size: 0.85rem;
+    color: var(--cinza);
+}
+
+.perfil-change{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+.change{
+    display: flex;
+}
+
+.left, .right{
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    cursor: pointer;
+    background: var(--branco);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.1rem;
+}
+
+.right{
+    margin-left: 30px;
+}
+
+.selected{
+    transform: scale(1.2);
+    background: var(--preto);
+    color: var(--branco);
+    font-size: 1.2rem;
+}
+
+/* footer */
+
+footer{
+    padding: 150px 0;
+    background: var(--preto);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.footer-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: rgba(255,255,255,0.05);
+    padding: 60px;
+}
+
+.footer-content h2{
+    font-size: 2.1rem;
+    color: var(--branco);
+    width: 50%;
+    letter-spacing: -2px;
+}
+
+.footer-email{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-email input[type='email']{
+    margin-right: 30px;
+    width: 60%;
+    padding-left: 20px;
+}
+
+.footer-email .btn{
+    background: var(--amarelo);
+}
+
+.footer-info{
+    position: absolute;
+    bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    color: var(--cinza);
+}
+
+.footer-info span{
+    font-family: 'Inter';
+}
+
+a .social{
+    margin-left: 30px;
+    color: var(--cinza);
+}
+
+
+@media screen and (max-width: 950px){
+    /*nav-links*/
+
+    .icon{
+        display: block;
+    }
+
+    .nav-links{
+        background: var(--branco);
+        position: absolute;
+        top: 0;
+        right: -250px;
+        width: 250px;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        text-align: center;
+        transition: 0.5s;
+    }
+
+    .nav-links li{
+        width: 100%;
+        margin: 0;
+    }
+
+    .nav-links li a{
+        display: block;
+        padding: 20px 0;
+        color: var(--preto);
+    }
+
+    .nav-links li:hover{
+        background: #cbcbcb;
+    }
+
+    /* informativo */
+
+    .informativo{
+        flex-direction: column;
+    }
+
+    .info-left, .info-right{
+        width: 100%;
+    }
+
+    .info-right{
+        margin-top: 50px;
+    }
+
+    .info-left-text{
+        padding: 50px;
+    }
+
+    /* categorias */
+
+    .categorias-container{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 920px){
+    /* about */
+
+    .about{
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    .about-text{
+        width: 100%;
+    }
+}
